all endpoints swagger docs
