# internal/http-server/handlers/todos/create.go
@@ -23,6 +23,18 @@ type CreateTodoRes struct {
 	Description string `json:"description,omitempty"`
 }
 
+// CreateTodoHandler godoc
+//
+//	@Summary		Create to-do post method
+//	@Description	create to-do
+//	@Tags			todos
+//	@Accept			json
+//	@Produce		json
+//	@Param			message	body		CreateTodoReq	true	"Account Info"
+//	@Success		200	{object}	CreateTodoRes "Success"
+//	@Failure		400		{object}	responseApi.Response			"Error"
+//	@Failure		500		{object}	responseApi.Response			"Error"
+//	@Router			/todos [post]
 func (t *TodoHandler) CreateTodoHandler(ctx *gin.Context) {
 	const op = "handlers.todos.create.New"
 
@@ -74,61 +86,6 @@ func (t *TodoHandler) CreateTodoHandler(ctx *gin.Context) {
 
 	responseCreated(ctx, req.Title, req.Description)
 }
-
-//func New(ctx *gin.Context, log *slog.Logger, todoService TodoService) http.HandlerFunc {
-//	return func(w http.ResponseWriter, r *http.Request) {
-//		const op = "handlers.todos.create.New"
-//
-//		log = log.With(
-//			slog.String("operation", op),
-//			slog.String("request_id", requestid.Get(ctx)),
-//		)
-//
-//		var req Request
-//
-//		if err := ctx.ShouldBind(&req); err != nil {
-//			log.Error("failed to bind the body", sl.Err(err))
-//
-//			ctx.IndentedJSON(http.StatusBadRequest, responseApi.Error("failed to bind body"))
-//
-//			return
-//		}
-//
-//		log.Info("request body successfully parsed", slog.Any("request", req))
-//
-//		if err := validator.New().Struct(req); err != nil {
-//			var validateErr validator.ValidationErrors
-//			errors.As(err, &validateErr)
-//
-//			log.Error("failed to validate request body", sl.Err(err))
-//
-//			ctx.IndentedJSON(http.StatusNotAcceptable, responseApi.ValidationError(validateErr))
-//
-//			return
-//		}
-//
-//		_, err := todoService.CreateTodo(req.Title, req.Description)
-//		if errors.Is(err, storage.ErrAlreadyExists) {
-//			log.Error("todo already exists", sl.Err(err))
-//
-//			ctx.IndentedJSON(http.StatusInternalServerError, responseApi.Error("todo already exists"))
-//
-//			return
-//		}
-//		if err != nil {
-//			log.Error("failed to create todo", sl.Err(err))
-//
-//			ctx.IndentedJSON(http.StatusInternalServerError, responseApi.Error("failed to create todo"))
-//
-//			return
-//		}
-//
-//		log.Info("todo successfully created", slog.String("title", req.Title),
-//			slog.String("description", req.Description))
-//
-//		responseCreated(ctx, req.Title, req.Description)
-//	}
-//}
 
 func responseCreated(ctx *gin.Context, title string, description string) {
 	ctx.IndentedJSON(http.StatusCreated, CreateTodoRes{
